force-app/main/default/objects/DHS_ROI_Report_Order__c/DHS_ROI_Report_Order__c.object-meta.xml
<CustomObject>
    <label>ROI Report Order</label>
    <nameField>
        <displayFormat>ROIOrder-{0000000}</displayFormat>
        <label>ROI Report Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ROI Report Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>