force-app/main/default/objects/DHS_ROI_Report_Order__c/fields/DHS_Case__c.field-meta.xml
<CustomField>
    <fullName>DHS_Case__c</fullName>
    <label>Case</label>
    <referenceTo>DHS_Case__c</referenceTo>
    <relationshipLabel>ROI Report Orders</relationshipLabel>
    <relationshipName>DHS_ROI_Report_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>