force-app/main/default/objects/DHS_ROI_Report_Order__c/fields/HideTitles__c.field-meta.xml
<CustomField>
    <fullName>HideTitles__c</fullName>
    <label>HideTitles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>