force-app/main/default/objects/DHS_ROI_Report_Order__c/fields/ROI_Report_Order__c.field-meta.xml
<CustomField>
    <fullName>ROI_Report_Order__c</fullName>
    <label>ROI Report Order</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>