force-app/main/default/objects/DHS_ROI_Report_Order__c/fields/Subheader_Order__c.field-meta.xml
<CustomField>
    <fullName>Subheader_Order__c</fullName>
    <label>Subheader Order</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>