force-app/main/default/objects/DHS_ROI_Report_Order__c/fields/Without_Subheader_Order_del__c.field-meta.xml
<CustomField>
    <fullName>Without_Subheader_Order_del__c</fullName>
    <label>Without Subheader Order</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>